--- a/css/styles.css
+++ b/css/styles.css
@@ -1,130 +1,6 @@
-#gridGallery {
-  max-width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.box {
-  background-position: center center;
-  background-size: cover;
-  border: 3px solid #fff;
-  transition: opacity .25s;
-  overflow: hidden;
-}
-
-#gridH {
-  background-color: #eee;
-  min-height: 600px;
-  margin-bottom: 50px;
-}
-
-#gridH .row {
-  margin-top: 150px;
-}
-
-#gridH {
-  margin-top: -150px;
-}
-
-#gridGallery>.row {
-  margin: 0;
-}
-
-#boxOne,
-#boxTwo,
-#boxThree,
-#boxNine,
-#boxEight {
-  height: 300px;
-}
-
-#headerBox {
-  background-image: url('https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDEvY2MyZTkxNWItYjVjOC00MDY4LWIxNTYtNWYzMTg4YzM0ZGI3LmpwZw==.jpg');
-  height: 400px;
-}
-
-#boxOne {
-  background-image: url('https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvM2U2YjY4MDgtM2FjOS00YTg0LWExYzQtZjQ1ZjgzMTU1OGJhLmpwZw==.jpg');
-}
-
-#boxTwo {
-  background-image: url('https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMzVjZjQ4MzYtZGEyMi00MDBlLWE3YTUtNzAzYzM1MTkzMDNkLmpwZw==.jpg');
-}
-
-#boxThree {
-  background-image: url('https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvNmQ3NTU2ZjQtOTQ3Yi00YzQ2LTkyOTUtMzMxN2IzMTgyYmRlLmpwZw==.jpg');
-}
-
-
-#boxEight {
-  background-image: url('https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvYTgwMzI5MzItOTExZi00N2RlLWFhMjYtYTc3ZTUwYTIwMGE3LmpwZw==.jpg');
-}
-
-#boxNine {
-  background-image: url('https://images.cointelegraph.com/images/717_aHR0cHM6Ly9zMy5jb2ludGVsZWdyYXBoLmNvbS91cGxvYWRzLzIwMjEtMDIvMmE3ODAzYzUtMWM5MC00ZDk4LWJmOTQtNTVjMDcxOWZmYjc5LmpwZw==.jpg');
-}
-
-
-.gridText {
+.gridbg{
   background-color: black;
   opacity: 0.8;
-  z-index: 1;
-  position: absolute;
-  bottom: -8;
-  left: 0;
-  width: 100%;
-  color: white;
-}
-
-
-
-@media (max-width: 1200px) {}
-
-@media (max-width: 992px) {}
-
-@media (max-width: 768px) {
-
-  #boxThree,
-  #boxFour,
-  #boxFive,
-  #boxSix {
-    height: 300px;
-  }
-
-  h3 {
-    margin-bottom: 0;
-  }
-
-  .box {
-    height: inherit;
-    width: 100%;
-  }
-
-  .box {
-    max-height: 150px !important;
-  }
-
-  #gridGallery .row {
-    background-color: transparent;
-  }
-
-  #gridH .row {
-    margin-top: 0px;
-  }
-
-  .box {
-    height: 50px !important;
-    left: 0 !important;
-    top: 0 !important;
-    width: 50px !important;
-    display: block;
-  }
-
-  .mobileFunction {
-    float: left;
-    height: 150px;
-    width: 100%;
-  }
-
-  /* SHAREPOINT ONLY */
+  margin-left: -5px;
+ 
 }
