--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,8 @@
-
-
 /* Portrait and Landscape */
-@media only screen 
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
 
+    h5 {
+        font-size: 10px;
+    }
 
- 
 }
